--- a/front/package.json
+++ b/front/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://localhost:3000/home",
   "name": "new",
   "version": "0.1.0",
   "private": true,
@@ -18,7 +19,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.8.2",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.13.8",
     "styled-components": "^5.3.6",
     "web-vitals": "^1.0.1"
   },
