--- a/front/package.json
+++ b/front/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://localhost:3000/home",
+  "homepage": "http://localhost:3000/",
   "name": "new",
   "version": "0.1.0",
   "private": true,
